--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "mqtt": "^2.15.0",
-    "sonos": "^0.19.0",
-    "xml2json": "^0.11.0",
+    "mqtt": "^2.15.1",
+    "sonos": "bencevans/node-sonos#sonos-async",
     "yalm": "^4.1.0",
-    "yargs": "^10.0.3"
+    "yargs": "^10.1.1"
   },
   "devDependencies": {
     "pre-commit": "^1.2.2",
